         connection in snapshots, need to implement GTK+ and widget dialogs
         so users can reconfig joysticks on snap loading. Switch Sinclair
         joysticks to match Sinclair documentation and other emulators.
20041025 timer.c: Use proper machine interrupt rate (e.g. 48k uses 50.08Hz).
20041025 hacking/input.txt: Fix typo.
20041029 rzx.c,ui.c,ui/ui.h,ui/gtk/gtkui.c,widget/widget.c: (de)activate
	 rollback menu items appropriately.
20041031 .cvsignore,z80/.cvsignore: ignore .libs directories.
20041106 settings.dat: make RZX files be compressed by default.
20041106 machine.c,menu.c,menu_data.c,trdos.c,ui.c,machines/specplus3.c,
	 man/fuse.1,ui/ui.h: split the Media/Disk menu into separate +3 and
	 TR-DOS entries.
20041106 display.c,menu.[ch],menu_data.c,screenshot.[ch],ui.c,ui/ui.h,
	 man/fuse.1,ui/gtk/gtkui.c,widget/{menu.c,widget.c}: add ability to
	 save 'movies' as collections of screenshots (Gergely Szasz).
20041113 AUTHORS,Makefile.am,THANKS,configure.in,sound/{Makefile.am,
	 aosound.c,lowlevel.h}: add ao sound driver (Gergely Szasz).
20041122 THANKS,sound/lowlevel.h: do <sys/audio.h> check before
	 <sys/soundcard.h> (thanks, Mark Round) (fixes bug #1068670).
20041128 Makefile.am, if1.[ch], machine.c, memory.[ch], menu.[ch],
	 menu_data.c, periph.[ch], settings.{dat,pl}, ui.c,
	 lib/Makefile.am, machines/{pentagon.c,spec128.c,spec16.c,spec48.c,
	 spec_se.c,specplus2.c,specplus2a.c,specplus3.c,specplus3e.c,
	 tc2048.c,tc2068.c}, roms/{Makefile.am,if1-[12].rom},
	 ui/{options.dat,ui.h}, ui/gtk/{gtkinternals.h,pixmaps.c,
	 statusbar.c}, ui/sdl/sdldisplay.c, z80/{coretest.c,z80_ops.c}:
	 Interface I and microdrive emulation (patch #1060831)
	 (Gergely Szasz)
20041128 if1.c,ui.c,ui/ui.h: simplify menu item (de)activation code.
20041128 if1.c: add void to prototypes where appropriate.
20041128 if1.[ch]: declare local functions as static.
20041128 if1.h: name parameters in if1.h prototypes.