@@ -378,4 +378,5 @@ periph_update( void )
 
   update_cartridge_menu();
   update_ide_menu();
+  if1_update_menu();
 }
